demo/config/kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mykuardconfig
  labels:
    name: kuard
    app: kuard-configmap
    env: test
spec:
  containers:
  - name: kuard-blue
    image: kherguner/k8s_up_running:kuard
    imagePullPolicy: Always
    command:
      - "/kuard"
      - "$(APP_USER)"
    ports:
      - containerPort: 8080
        name: http
        protocol: TCP
    resources:
      requests:
        cpu: "250m"
        memory: "128Mi"
      limits:
        cpu: "500m"
        memory: "256Mi"
    livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
    readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
