demo/config/kuard-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: 
spec:
  type: NodePort
  selector:
    app: kuard-configmap
  ports:
  - port: 8091
    protocol: TCP
    targetPort: 8080
    nodePort: 30035
